[tool.poetry]
name = "garmoshka"
version = "0.1.0"
description = ""
authors = ["Viacheus <glorianfox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.8"
pyqt6 = "^6.7.1"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
